--- a/css/style.css
+++ b/css/style.css
@@ -248,12 +248,10 @@ a:focus {
 
 .btn-trans-darker {
   background-color: rgba(0, 0, 0, 0.2);
-  opacity: 0.6;
 }
 
 .btn-trans-lighter {
   background-color: rgba(255, 255, 255, 0.2);
-  opacity: 0.6;
 }
 
 .btn-white-text {
@@ -323,18 +321,20 @@ a:focus {
 .btn-white-bordered {
   font-weight: 600;
   border: 2px solid white;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .btn-white-bordered:hover,
 .btn-white-bordered:focus {
+  border: 2px solid white;
   color: rgba(50, 50, 50, 1);
   background-color: white;
 }
 
 .btn-white-bordered:active {
-  border: 2px solid rgba(238, 238, 238, 1);
+  border: 2px solid rgba(237, 237, 237, 1);
   color: rgba(50, 50, 50, 1);
-  background-color: white;
+  background-color: rgba(237, 237, 237, 1);
 }
 
 .btn-hidden {
@@ -444,32 +444,43 @@ a:focus {
 }
 
 .main-menu .current {
-  text-decoration: none;
-  border-bottom: none;
   background-color: rgba(209, 112, 87, 1);
+}
+
+.current > span {
+  background-image: none;
 }
 
 .main-menu .menu-link:hover,
 .main-menu .menu-link:focus,
-.main-menu .menu-link:focus {
+.main-menu .menu-link:active {
   text-decoration: none;
   border-bottom: none;
   color: rgba(50, 50, 50, 1);
   background-color: rgba(255, 255, 255, 1);
 }
 
+.submenu-entrance::after,
+.personal-menu-item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;    
+}
+
 .submenu {
   position: absolute;
   z-index: 10;
-  top: 0;
+  top: 35px;
   left: 1em;
   display: none;
   overflow: hidden;
   width: 143px;
   margin: 0;
   padding: 0;
-  list-style: none;
-  border-top: 2em transparent solid;
+  list-style: none; 
   border-radius: 5px;
   color: rgba(50, 50, 50, 1);  
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
@@ -524,7 +535,7 @@ a:focus {
 }
 
 .submenu-entrance, 
-.personal-menu {
+.personal-menu-item {
   position: relative;
 }
 
@@ -569,12 +580,12 @@ a:focus {
   background-image: url("../img/menu-loupe-black.svg");
 }
 
-.link-search:hover + .form-search,
-.link-entrance:hover + .form-entrance { 
+.link-search-item:hover > .form-search,
+.link-entrance-item:hover > .form-entrance { 
   display: block; 
 }
 
-.link-basket-full:hover + .form-basket {  
+.link-basket-full-item:hover > .form-basket {  
   display: flex;   
 }
 
@@ -1527,18 +1538,16 @@ a:focus {
 
 .form-search {
   position: absolute; 
-  /*width: 341px; */   
-  width: 321px;  
+  width: 341px;    
   right: 0;   
-  margin-top: 10px; 
+  margin-top: 2px; 
 }
 
 .form-entrance {
   position: absolute;  
-  /*width: 241px; */ 
-  width: 321px;
+  width: 261px;  
   right: 0;   
-  margin-top: 10px; 
+  margin-top: 2px; 
 }
 
 .form-entrance-password {
@@ -1562,9 +1571,8 @@ a:focus {
 
 .form-entrance-link-wrapper {
   flex-direction: column;
-  flex-basis: 60%;
-  max-width: 60%; 
-  margin-left: 10%;
+  flex-basis: 65%;
+  max-width: 65%; 
   padding: 0.5em;
 }
 
@@ -1583,8 +1591,7 @@ a:focus {
   flex-direction: column;
   align-items: flex-end;
   width: 541px;
-  min-height: 242px;
-  /*padding: 10px 12px;*/
+  min-height: 242px;  
   padding: 10px 15px;
   font-size: 13px;
   line-height: 18px;
@@ -1685,18 +1692,14 @@ a:focus {
   border-radius: 50%;
 }
 
-.pagination-link:hover,
-.pagination-link:focus {
+.pagination-link:hover {
   color: white;
   background-color: rgba(255, 255, 255, 0.2);
 }
 
-.pagination-link:focus {
-  border: 2px solid rgba(255, 255, 255, 0.3);
-}
-
 .pagination-link.current,
-.pagination-link:active {
+.pagination-link:active,
+.pagination-link:focus {
   color: rgba(50, 50, 50, 1);
   background-color: white;
 }
@@ -1741,6 +1744,7 @@ a:focus {
 
 .gllacy-field:valid {
   font-weight: bold;
+  color : rgba(50, 50, 50, 1);
 }
 
 .shadowed {
@@ -1896,9 +1900,9 @@ a:focus {
   left: 0;
   right: 0;
   bottom: 0;
-  width: 1200px;
-  height: 100%;
-  margin: 0 auto;
+  width: auto;
+  height: auto;
+  margin: 0;
   background-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -1945,7 +1949,7 @@ a:focus {
 .effect {
   position: fixed;   
   animation-name: transformation, spinning, coloration;
-  animation-duration: 2s, 2s, 2.5s;
+  animation-duration: 1.7s, 1.7s, 1.9s;
   animation-fill-mode: backwards;
 }
 
