--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ a:focus {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100px;    
+  height: 45px;    
 }
 
 .submenu {
@@ -559,6 +559,16 @@ a:focus {
   text-align: right;
   background-color: rgba(255, 255, 255, 0.2);
   background-repeat: no-repeat;  
+  z-index: 1;
+}
+
+.link-search-item:hover > .form-search,
+.link-entrance-item:hover > .form-entrance { 
+  display: block; 
+}
+
+.link-basket-full-item:hover > .form-basket {  
+  display: flex;   
 }
 
 .personal-menu .menu-link:hover,
@@ -580,14 +590,6 @@ a:focus {
   background-image: url("../img/menu-loupe-black.svg");
 }
 
-.link-search-item:hover > .form-search,
-.link-entrance-item:hover > .form-entrance { 
-  display: block; 
-}
-
-.link-basket-full-item:hover > .form-basket {  
-  display: flex;   
-}
 
 .link-entrance {
   background-image: url("../img/menu-entrance-white.svg");  
@@ -1704,6 +1706,11 @@ a:focus {
   background-color: white;
 }
 
+.pagination-link-next,
+.pagination-link-previous {
+  transform: scale(1.2);
+}
+
 .pagination::after {
   content: "";
   position: absolute;
@@ -1718,7 +1725,7 @@ a:focus {
 .link-disabled,
 .link-disabled:hover {
   cursor: default;
-  color: lightgrey;
+  color: rgba(255, 255, 255, 0.2);
   background-color: transparent;
 }
 
