--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,11 @@ body {
 
 .gllacy-wrapper-wide {
   width: 100%;
-  min-height: bolder;
   background-color: rgba(132, 157, 143, 1);
   background-image: url("../img/header-ice-1.png"),
   radial-gradient(at 50% 50%,rgba(207, 246, 225, 0.5) 0%,  rgba(132, 157, 143, 0.1) 60%,  rgba(132, 157, 143, 1) 100%);
   background-repeat: no-repeat, no-repeat;
-  background-position: center 80px, center top;
+  background-position: center 82px, center top;
   background-size: 647px 584px, 900px 584px;
 }
 
@@ -222,7 +221,7 @@ body {
 }
 
 .btn-large {
-  padding: 0.4em 1.3em;
+  padding: 10px 40px 14px;
   font-size: 32px;
   font-weight: bold;
   line-height: 40px;
@@ -340,6 +339,8 @@ body {
 
 .logo {
   flex-basis: 154px;
+  display: block;
+  margin-top: 5px;
 }
 
 .main-menu,
@@ -363,6 +364,7 @@ body {
   justify-content: flex-end;
   max-width: 40%;
   margin-left: auto;
+  margin-top: 2px;
 }
 
 .menu-link,
@@ -385,7 +387,7 @@ body {
 }
 
 .main-menu .menu-link {
-  padding: 0.4em 0.8em;
+  padding: 0.4em 0.75em;
 }
 
 .main-menu .current {
@@ -545,9 +547,9 @@ body {
 
 .link-entrance {
   min-width: 92px;
-  padding: 0.3em 1em 0.3em 40px;
+  padding: 6px 17px 6px 40px;
+  background-position: 17px center;
   background-image: url("../img/menu-entrance-white.svg");
-  background-position: 10px center;
 }
 
 .link-entrance:hover,
@@ -558,8 +560,8 @@ body {
 .link-basket-full,
 .link-basket-empty {
   min-width: 116px;
-  padding: 0.3em 0.6em 0.3em 40px;
-  background-position: 16px center;
+  padding: 6px 17px 6px 40px;
+  background-position: 17px center;
 }
 
 .link-basket-empty {
@@ -598,7 +600,8 @@ body {
 
 .header-info > p:nth-of-type(2) {
   font-size: 22px;
-  line-height: 32px;
+  line-height: 28px;
+  letter-spacing: -0.5px;
 }
 
 .page-catalog-header-info > p:nth-of-type(2) {
@@ -620,7 +623,7 @@ body {
 }
 
 .slide-title {
-  margin: 0 0 34px;
+  margin: 0 0 32px;
   font-size: 60px;
   font-weight: bold;
   line-height: 61px;
@@ -656,8 +659,7 @@ body {
   align-items: stretch;
   max-width: 46.6%;
   min-height: 230px;
-  padding: 21px;
-  padding: 15px 21px 28px;
+  padding: 16px 18px 24px;
   border-radius: 0.7em;
   background-repeat: no-repeat;
   background-size: cover;
@@ -678,6 +680,8 @@ body {
 }
 
 .promo-item-text {
+  margin: 10px 0;
+  padding: 5px 0;
   font-size: 18px;
   font-weight: bold;
   line-height: 22px;
@@ -686,6 +690,7 @@ body {
 .promo-item-button {
   align-self: flex-end;
   margin: auto 0 0;
+  padding: 9px 24px 12px
 }
 
 .promo-item:nth-of-type(1) {
@@ -845,9 +850,9 @@ body {
 }
 
 .about {
-  min-height: 305px;
+  min-height: 306px;
   margin: 40px 2.3%;
-  padding: 22px 16px;
+  padding: 24px 16px;
   border-radius: 0.7em;
   color: rgba(50, 50, 50, 1);
   background-color: inherit;
@@ -893,9 +898,9 @@ body {
 .about-item::before {
   content: "";
   position: absolute;
-  top: -15px;
+  top: -13px;
   left: 2px;
-  width: 49px;
+  width: 50px;
   height: 49px;
   border-radius: 50%;
   background-color: inherit;
@@ -988,7 +993,7 @@ body {
 
 .other-item-subscribe-text {
   flex-basis: 100%;
-  margin: 30px 21px 21px 21px;
+  margin: 30px 18px 18px 18px;
   padding: 0;
   font-size: 16px;
   font-weight: normal;
@@ -996,8 +1001,8 @@ body {
 }
 
 .other-item-subscribe-email {
-  flex-basis: 62%;
-  max-width: 62%;
+  flex-basis: 67%;
+  max-width: 67%;
   margin: auto 0 35px 21px;
   padding: 1.5em;
   flex-shrink: 1;
@@ -1064,7 +1069,7 @@ body {
 .map-info {
   z-index: 3;
   width: 302px;
-  min-height: 305px;
+  min-height: 300px;
   margin: 64px 2.2% 64px auto;
   padding: 25px;
   border-radius: 0.7em;
@@ -1106,7 +1111,7 @@ body {
   align-items: center;
   flex-wrap: nowrap;
   min-height: 103px;
-  padding-top: 16px;
+  padding-top: 10px;
   padding-bottom: 16px;
   font-size: 13px;
   line-height: 18px;
@@ -1118,18 +1123,17 @@ body {
   flex-basis: 22.2%;
   flex-wrap: wrap;
   max-width: 22.2%;
-  margin: 0;
-  margin-left: 2.2%;
+  margin: 6px 0 0 2.2%;
   padding: 0;
   list-style: none;
 }
 
 .footer-center {
   display: flex;
-  flex-basis: 46.6%;
+  flex-basis: 46%;
   justify-content: center;
   align-items: center;
-  max-width: 46.6%;
+  max-width: 46%;
   margin-left: 2.2%;
 }
 
@@ -1191,19 +1195,24 @@ body {
 .footer-menu {
   display: flex;
   flex-direction: row;
-  flex-basis: 62%;
+  flex-basis: 100%;
   justify-content: space-between;
   flex-wrap: wrap;
-  min-width: 62%;
+  min-width: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.footer-menu > li {
+.footer-menu-item {
   display: inline-block;
   width: 50%;
-  vertical-align: top;
+  vertical-align: baseline;
+  margin-top: 4px;
+}
+
+.footer-menu-item:nth-child(2n-1) .footer-menu-link {
+  margin-left: 46%; /*PP purpose only*/
 }
 
 .footer-menu-link {
@@ -1307,7 +1316,7 @@ body {
 .filter-section {
   display: flex;
   flex-direction: row;
-  justify-content: space-around; 
+  justify-content: space-around;
   margin: 0;
   padding: 0.4em;
   flex-grow: 0;
@@ -1517,6 +1526,8 @@ body {
 
 .footer-logo {
   cursor: pointer;
+  display: block;
+  margin-left: 22px;
 }
 
 .form-search {
@@ -1941,12 +1952,21 @@ body {
     flex-basis: 80%;
   }
 
+  .footer-menu-item:nth-child(2n-1) .footer-menu-link {
+    margin-left: 40%;
+  }
+
   .slider .slider-items {
     max-width: 80%;
   }
 
   .catalog-item-price {
-    top: 170px;  
+    top: 170px;
+  }
+
+  .other-item-subscribe-email {
+    width: 60%;
+    max-width: 60%;
   }
 }
 
@@ -1960,7 +1980,7 @@ body {
   }
 
   .catalog-item-price {
-    top: 160px;  
+    top: 160px;
   }
 
   .catalog-item-img {
@@ -1974,5 +1994,8 @@ body {
 
   .footer-info {
     min-width: 24.2%;
+    text-align: right;
   }
+
+
 }
